cabal-version:   3.0
name:            bjpg
version:         0.1.0.0

-- synopsis:
-- description:
license:
author:          Joshua Morris
maintainer:      joshua.morris@hey.com

-- copyright:
category:        Game
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:
    Blackjack.Card
    Blackjack.Deck
    Blackjack.Game
    Blackjack.Hand
    Blackjack.Rules

  -- other-modules:
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:
    , array   ^>=0.5.8.0
    , base    ^>=4.18.2.1
    , random  ^>=1.3.1

  -- Directories containing source files.
  hs-source-dirs:   src

  -- Base language which the package is written in.
  default-language: Haskell2010

executable bjpg
  -- Import common warning flags.
  import:           warnings

  -- .hs or .lhs file containing the Main module.
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:
    , array   ^>=0.5.8.0
    , base    ^>=4.18.2.1
    , bjpg
    , random  ^>=1.3.1

  -- Directories containing source files.
  hs-source-dirs:   app

  -- Base language which the package is written in.
  default-language: Haskell2010

test-suite bjpg-test
  -- Import common warning flags.
  import:           warnings

  -- Base language which the package is written in.
  default-language: Haskell2010

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- The interface type and version of the test suite.
  type:             exitcode-stdio-1.0

  -- Directories containing source files.
  hs-source-dirs:   test

  -- The entrypoint to the test suite.
  main-is:          Main.hs

  -- Test dependencies.
  build-depends:
    , base  ^>=4.18.2.1
    , bjpg
